--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  @apply bg-slate-100;
 }
 
 a {
@@ -13,4 +19,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+* {
+  font-family: "Poppins", sans-serif;
 }
